--- a/src/components/TypingTitle.astro
+++ b/src/components/TypingTitle.astro
@@ -1,5 +1,13 @@
+---
+export type Props = {
+  text?: string;
+};
+
+const { text = 'une communication qui fait sens' } = Astro.props;
+---
+
 <div class="flex h-72 w-full items-center justify-center">
-  <p class="font-larken md:text-3xl text-xl font-light">une communication qui fait sens</p>
+  <p class="font-larken md:text-3xl text-xl font-light">{text}</p>
 </div>
 
 <script>
