--- a/src/components/AgencyOneService.astro
+++ b/src/components/AgencyOneService.astro
@@ -3,80 +3,86 @@ import Button from './subcomponents/Button.astro';
 import SubTitle from './subcomponents/SubTitle.astro';
 
 export type OneService = {
-    color: string;
-    number: string;
+  color: string;
+  number: string;
+  title: string;
+  subtitle: string;
+  description: string[];
+  benefits: {
     title: string;
-    subtitle: string;
     description: string[];
-    benefits: {
-        title: string;
-        description: string[];
-    }[];
+    time?: string;
+  }[];
 };
 
 export type Props = {
-    oneService: OneService;
+  oneService: OneService;
 };
 
 const { oneService } = Astro.props;
 ---
 
 <div class="flex flex-col gap-10 my-28">
-    <SubTitle title="des services, rien que pour vous !" />
-    <div class="relative flex w-full flex-col items-center">
-        <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-24 px-10 md:px-20 md:grid-cols-2 xl:grid-cols-3">
-            <div class="flex gap-6 text-black/90 md:border-r border-black md:pr-12">
-                <div class="flex flex-col gap-3 font-larken">
-                    <p class="text-5xl" style={`color: ${oneService.color};`}>{oneService.number}</p>
-                    <p class="text-lg" style={`color: ${oneService.color};`}>{oneService.title}</p>
-                    <p class="font-poppins text-xs font-normal italic text-subtitlecard">{oneService.subtitle}</p>
-                    <div class="flex flex-col gap-0">
-                        {oneService.description.map((item) => <p class="font-poppins">{item}</p>)}
-                    </div>
-                    <Button text="réserver un projet" variant="dark" url="#contact-form" />
-                </div>
-            </div>
-            {
-                oneService.benefits.map((benefit) => (
-                    <div class="flex flex-col gap-4 text-primary benefits-item">
-                        <div class="flex flex-col gap-1">
-                            <h4 class="text-lg font-larken uppercase text-primary">{benefit.title}</h4>
-                        </div>
-                        <div class="flex flex-col pr-5 text-text">
-                            {benefit.description.map((item) => (
-                                <p>{item}</p>
-                            ))}
-                        </div>
-                        <Button text="c’est ce qu’il me faut !" url="#contact-form" />
-                    </div>
-                ))
-            }
+  <SubTitle title="des services, rien que pour vous !" />
+  <div class="relative flex w-full flex-col items-center">
+    <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-24 px-10 md:px-20 md:grid-cols-2 xl:grid-cols-3">
+      <div class="flex gap-6 text-black/90 md:border-r border-black md:pr-12">
+        <div class="flex flex-col gap-3 font-larken">
+          <p class="text-5xl" style={`color: ${oneService.color};`}>{oneService.number}</p>
+          <p class="text-lg" style={`color: ${oneService.color};`}>{oneService.title}</p>
+          <p class="font-poppins text-xs font-normal italic text-subtitlecard">{oneService.subtitle}</p>
+          <div class="flex flex-col gap-0">
+            {oneService.description.map((item) => <p class="font-poppins">{item}</p>)}
+          </div>
+          <Button text="réserver un projet" variant="dark" url="#contact-form" />
         </div>
+      </div>
+      {
+        oneService.benefits.map((benefit) => (
+          <div class="flex flex-col gap-4 text-primary benefits-item">
+            <div class="flex flex-col gap-1">
+              <h4 class="text-lg font-larken uppercase text-primary">{benefit.title}</h4>
+            </div>
+            <div class="flex flex-col pr-5 text-text gap-4">
+              {benefit.description.map((item) => (
+                <p>{item}</p>
+              ))}
+            </div>
+            {benefit.time && (
+              <p class="font-larken" style={`color: ${oneService.color};`}>
+                <span class="font-normal text-base">{benefit.time}</span> à partir du lancement du projet
+              </p>
+            )}
+            <Button text="c’est ce qu’il me faut !" url="#contact-form" />
+          </div>
+        ))
+      }
     </div>
+  </div>
 </div>
 
 <style>
+  .benefits-item {
+    padding-right: 3rem;
+    padding-left: 3rem;
+  }
+
+  @media (max-width: 768px) {
     .benefits-item {
-        padding-right: 3rem;
-        padding-left: 3rem;
+      padding-right: 1rem;
+      padding-left: 0;
     }
+  }
 
-    @media (max-width: 768px) {
-        .benefits-item {
-            padding-right: 1rem;
-            padding-left: 0;
-        }
+  @media (max-width: 1280px) {
+    .benefits-item:nth-child(2n + 1) {
+      padding-left: 0;
     }
+  }
 
-    @media (max-width: 1280px) {
-        .benefits-item:nth-child(2n + 1) {
-            padding-left: 0;
-        }
+  @media (min-width: 1280px) {
+    .benefits-item:nth-child(3n + 1) {
+      padding-left: 0;
     }
-
-    @media (min-width: 1280px) {
-        .benefits-item:nth-child(3n + 1) {
-            padding-left: 0;
-        }
-    }
+  }
 </style>
