--- a/src/components/AgencyServices.astro
+++ b/src/components/AgencyServices.astro
@@ -1,5 +1,5 @@
 ---
-import OneService, { Service } from './subcomponents/OneService.astro';
+import OneService, { type Service } from './subcomponents/OneService.astro';
 import SubTitle from './subcomponents/SubTitle.astro';
 const services: Service[] = [
   {
@@ -33,7 +33,7 @@ const services: Service[] = [
     buttonLink: '/services/contenu-digital',
     description: ['shooting photos | montage vidéo | création de visuels réseaux sociaux'],
     number: '04',
-    subtitle: 'des visuels dynamiques.',
+    subtitle: 'des visuels professionnels.',
     isButton: true,
   },
   {
@@ -58,7 +58,7 @@ const services: Service[] = [
       {services.map((service) => <OneService {...service} maxWidth="328px" />)}
     </ul>
     <div
-      class="bottom-0 right-0 select-none z-10 flex w-full flex-col gap-5 bg-marron_fonce p-12 text-right font-larken text-3xl text-background md:absolute md:w-fit md:translate-y-1/3"
+      class="bottom-0 right-0 select-none z-10 flex w-full flex-col gap-5 bg-orange p-12 text-right font-larken text-3xl text-background md:absolute md:w-fit md:translate-y-1/3"
     >
       <p class="hover:opacity-75" id="text-orange">CONSEIL</p>
       <p class="hover:opacity-75" id="text-orange">CRÉATIVITÉ</p>
@@ -72,7 +72,7 @@ const services: Service[] = [
 
 <style>
   .text-orange {
-    color: #cc9f5c;
+    color: #2b2417;
   }
 </style>
 
