--- a/src/components/subcomponents/SubTitle.astro
+++ b/src/components/subcomponents/SubTitle.astro
@@ -9,8 +9,8 @@ const { title } = Astro.props;
 <div>
   <div class="flex h-full w-full items-center justify-center">
     <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-5 px-10 md:px-20">
-      <p class="max-w-[400px] font-larken text-4xl">{title}</p>
-      <p class="text-xs">JOLILOT | AGENCE DE COMMUNICATION | LOTOISE</p>
+      <p class="max-w-[450px] font-larken text-4xl">{title}</p>
+      <p class="text-xs">JOLILOT | AGENCE CRÉATIVE LOTOISE</p>
     </div>
   </div>
 </div>
