--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -31,7 +31,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
         aria-label="Ma page instagram @jolilot.atelier"
         target="_blank"
         referrerpolicy="no-referrer"
-        class="hover:text-orange pl-9">PROJETS</a
+        class="text-orange ml-9 hover:text-marron_fonce">PROJETS</a
       >
     </div>
     <button
@@ -74,7 +74,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
           aria-label="Ma page instagram @jolilot.atelier"
           target="_blank"
           referrerpolicy="no-referrer"
-          class="hover:text-orange pt-8">PROJETS</a
+          class="text-orange pt-8 hover:text-marron_fonce">PROJETS</a
         >
       </div>
     </div>
@@ -153,7 +153,8 @@ function closeMobileMenu() {
     fill: none;
     stroke: currentColor;
     stroke-width: 6;
-    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition:
+      stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
       stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .line1 {
