--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -9,113 +9,110 @@ import Insta4 from '../assets/INSTA/4.jpg';
 import AFTCIcon from '../components/Icons/AFTCIcon.astro';
 import FlecheIcon from '../components/Icons/FlecheIcon.astro';
 const PostsInstagram = [
-    {
-        url: 'https://www.instagram.com/p/CpSPcYJMCf2/',
-        image: Insta1,
-    },
-    {
-        url: 'https://www.instagram.com/p/Cop7O1YOciK/',
-        image: Insta2,
-    },
-    {
-        url: 'https://www.instagram.com/p/CnJststMdVN/',
-        image: Insta3,
-    },
-    {
-        url: 'https://www.instagram.com/p/Ck-RRiXMPSg/',
-        image: Insta4,
-    },
+  {
+    url: 'https://www.instagram.com/p/CpSPcYJMCf2/',
+    image: Insta1,
+  },
+  {
+    url: 'https://www.instagram.com/p/Cop7O1YOciK/',
+    image: Insta2,
+  },
+  {
+    url: 'https://www.instagram.com/p/CnJststMdVN/',
+    image: Insta3,
+  },
+  {
+    url: 'https://www.instagram.com/p/Ck-RRiXMPSg/',
+    image: Insta4,
+  },
 ];
 ---
 
 <div class="flex justify-center pt-20 pb-10">
-    <div class="flex w-full max-w-7xl flex-col gap-7">
-        <div class="grid grid-cols-1 xl:grid-cols-3 gap-4 px-10 items-center">
-            <div class="flex flex-col items-center text-center">
-                <p class="font-larken text-3xl">suivre toute l'actualité jolilot</p>
-                <p>@jolilot.atelier</p>
-            </div>
-            <div
-                class="xl:col-span-2 max-w-xs sm:max-w-2xl place-self-center xl:place-self-end flex flex-col items-center glide glidef gap-y-8"
-            >
-                <div class="glide">
-                    <div class="glide__track" data-glide-el="track">
-                        <ul class="glide__slides">
-                            {
-                                PostsInstagram.map((post) => (
-                                    <li class="glide__slide">
-                                        <a
-                                            rel="noreferrer"
-                                            class="hover:opacity-70"
-                                            href={post.url}
-                                            target="_blank"
-                                            referrerpolicy="no-referrer"
-                                        >
-                                            <Image
-                                                src={post.image}
-                                                alt="Photo 1 instagram"
-                                                class="object-cover aspect-square"
-                                            />
-                                        </a>
-                                    </li>
-                                ))
-                            }
-                        </ul>
-                    </div>
-                </div>
-                <div data-glide-el="controls" class="xl:hidden flex gap-4">
-                    <button data-glide-dir="<" class="rotate-180" aria-label="Precedent">
-                        <FlecheIcon />
-                    </button>
-                    <button data-glide-dir=">" aria-label="Suivant">
-                        <FlecheIcon />
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div
-            class="text-center flex justify-evenly border-t border-black/90 pt-10 md:flex-row flex-col items-center gap-y-2"
-        >
-            <p>© 2023 Jolilot Atelier I Lucie Arcoutel I Mentions légales</p>
-            <a href="/" aria-label="Retour a la page d'accueil" class="max-sm:order-3"
-                ><LogoIcon classes="w-[100px]" /></a
-            >
-            <div class="flex items-center gap-4 justify-center flex-wrap">
-                <p>
-                    Cette année Jolilot soutient l’association <a
-                        href="https://aftc-lot.fr/"
-                        target="_blank"
-                        referrerpolicy="no-referrer">AFTC.LOT</a
+  <div class="flex w-full max-w-7xl flex-col gap-7">
+    <div class="grid grid-cols-1 xl:grid-cols-3 gap-4 px-10 items-center">
+      <div class="flex flex-col items-center text-center">
+        <p class="font-larken text-3xl">suivre toute l'actualité jolilot</p>
+        <p>@jolilot.atelier</p>
+      </div>
+      <div
+        class="xl:col-span-2 max-w-xs sm:max-w-2xl place-self-center xl:place-self-end flex flex-col items-center glide glidef gap-y-8"
+      >
+        <div class="glide">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              {
+                PostsInstagram.map((post) => (
+                  <li class="glide__slide">
+                    <a
+                      rel="noreferrer"
+                      class="hover:opacity-70"
+                      href={post.url}
+                      target="_blank"
+                      referrerpolicy="no-referrer"
                     >
-                </p>
-                <a
-                    href="https://aftc-lot.fr/"
-                    target="_blank"
-                    referrerpolicy="no-referrer"
-                    aria-label="Lien vers le site de l'association AFTC.LOT"><AFTCIcon /></a
-                >
-            </div>
+                      <Image src={post.image} alt="Photo 1 instagram" class="object-cover aspect-square" />
+                    </a>
+                  </li>
+                ))
+              }
+            </ul>
+          </div>
         </div>
+        <div data-glide-el="controls" class="xl:hidden flex gap-4">
+          <button data-glide-dir="<" class="rotate-180" aria-label="Precedent">
+            <FlecheIcon />
+          </button>
+          <button data-glide-dir=">" aria-label="Suivant">
+            <FlecheIcon />
+          </button>
+        </div>
+      </div>
     </div>
+    <div
+      class="text-center flex justify-evenly border-t border-black/90 pt-10 md:flex-row flex-col items-center gap-y-2"
+    >
+      <p>
+        © 2023 Jolilot Atelier | Lucie Arcoutel | <a href="/mentions-legales">Mentions légales</a> | <a
+          href="/confidentialité">Politique de Confidentialité</a>
+      </p>
+      <a href="/" aria-label="Retour a la page d'accueil" class="max-sm:order-3"><LogoIcon classes="w-[100px]" /></a>
+      <div class="flex items-center gap-4 justify-center flex-wrap">
+        <p>
+          Cette année Jolilot soutient l’association <a
+            href="https://aftc-lot.fr/"
+            target="_blank"
+            referrerpolicy="no-referrer">AFTC.LOT</a
+          >
+        </p>
+        <a
+          href="https://aftc-lot.fr/"
+          target="_blank"
+          referrerpolicy="no-referrer"
+          aria-label="Lien vers le site de l'association AFTC.LOT"><AFTCIcon /></a
+        >
+      </div>
+    </div>
+  </div>
 </div>
 
 <script type="module" async defer>
-import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
+  import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
 
-new Glide('.glidef', {
+  new Glide('.glidef', {
     perView: 4,
     type: 'carousel',
     gap: 30,
     breakpoints: {
-        1024: {
-            perView: 3,
-        },
-        768: {
-            perView: 2,
-        },
-        640: {
-            perView: 1,
-        },
+      1024: {
+        perView: 3,
+      },
+      768: {
+        perView: 2,
+      },
+      640: {
+        perView: 1,
+      },
     },
-}).mount();
+  }).mount();
 </script>
