--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,9 +2,10 @@
 import BookAProject from './BookAProject.astro';
 import Footer from './Footer.astro';
 import Header from './Header.astro';
+import ScrollToTop from './ScrollToTop.astro';
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -25,6 +26,7 @@ import Header from './Header.astro';
   <body class="flex flex-col bg-background font-extralight text-xs">
     <Header />
     <BookAProject />
+    <ScrollToTop />
     <slot />
     <Footer />
   </body>
@@ -50,6 +52,12 @@ import Header from './Header.astro';
       -ms-text-size-adjust: 100%;
       text-size-adjust: 100%;
       scroll-behavior: smooth;
+    }
+    * {
+      cursor:
+        url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="orange" opacity="0.8"><circle cx="16" cy="16" r="10"/></svg>')
+          16 16,
+        auto;
     }
 
     ::-webkit-scrollbar {
